# MSTGAM-4trading

./: .gitignore  README.md  pyproject.toml  setup.sh
data/: AAPL.csv  AMD.csv  AMZN.csv  AVGO.csv  BABA.csv  BITF.csv  COIN.csv  DIS.csv  GLOB.csv  HUT.csv  INTC.csv  MELI.csv  META.csv  MU.csv  NIO.csv  NVDA.csv  ORCL.csv  PLTR.csv  RGTI.csv  RIOT.csv  SATL.csv  TLSA.csv  UBER.csv  test.csv  test_2.csv
notebooks/: AAPL analysis.ipynb  ORCL analysis.ipynb  backtest.ipynb  data_downloader.ipynb  test.ipynb  test_2.ipynb  tester.ipynb
persistency/: AAPL_model.pkl  NVDA_model.pkl  ORCL_model.pkl  TEST_2_model.pkl  TLSA_model.pkl  best_individual.pkl  test_model.pkl
src/: aborrar.py  dc_main.py  dc_strategies.py  main.py  main2.py  strategies.py  trainer.py  trainer2.py  utils.py
