[tool.poetry]
name = "MSTGAM-4trading"
version = "0.1.0"
description = "Multi-Strategy/Threshold-Genetic-Algorithm-Model for Trading based on article doi: https://doi.org/10.1007/s10462-025-11419-z"
authors = ["Braian Desia"]
readme = "README.md"

packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = ">=2.3.2,<3.0.0"
matplotlib = ">=3.10.6,<4.0.0"
pandas = ">=2.3.2,<3.0.0"
scipy = ">=1.16.1,<2.0.0"
yfinance = ">=0.2.65,<0.3.0"
deap = "^1.4.3"
investpy = "^1.0.8"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.31.0"
jupyterlab = "^4.2.0"
jupyterlab-widgets = "3.0.13"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

